feat: clear api for users
